src/y.output
Estado 162 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: Programa $end

    1 Programa: Cabecera Bloque

    2 Cabecera: INICIO PAREN_IZQ PAREN_DER

    3 Bloque: LLAVE_IZQ Declar_variables_locales Declar_funciones Sentencias LLAVE_DER

    4 Declar_variables_locales: VAR_IZQ Cuerpo_variables VAR_DER
    5                         | %empty

    6 Cuerpo_variables: Cuerpo_variables Declar_variables
    7                 | Declar_variables

    8 Declar_variables: Tipo Lista_ident DELIMIT
    9                 | error

   10 Tipo: Tipo_dato
   11     | Tipo_lista

   12 Tipo_dato: TIPO

   13 Tipo_lista: TIPO_LIST Tipo_dato

   14 Lista_ident: Lista_ident SEPAR IDENT
   15            | Lista_ident error IDENT
   16            | IDENT

   17 Declar_funciones: Declar_funciones Declar_funcion
   18                 | %empty

   19 Cabecera_funcion: TIPO IDENT PAREN_IZQ Lista_parametros PAREN_DER
   20                 | error

   21 Declar_funcion: Cabecera_funcion Bloque

   22 Lista_parametros: Lista_parametros SEPAR Parametro
   23                 | Lista_parametros error Parametro
   24                 | Parametro
   25                 | %empty

   26 Parametro: TIPO IDENT

   27 Sentencias: Sentencias Sentencia
   28           | Sentencia

   29 Sentencia: Bloque
   30          | Sentencia_asig DELIMIT
   31          | Sentencia_if
   32          | Sentencia_while
   33          | Sentencia_for
   34          | Sentencia_entrada DELIMIT
   35          | Sentencia_salida DELIMIT
   36          | Sentencia_return DELIMIT
   37          | Sentencia_iterar DELIMIT
   38          | Sentencia_comienzo DELIMIT

   39 Sentencia_asig: IDENT IGUAL Expresion

   40 Lista_expresiones: Lista_expresiones SEPAR Expresion
   41                  | Lista_expresiones error Expresion
   42                  | Expresion

   43 Expresion: PAREN_IZQ Expresion PAREN_DER
   44          | OP_UNARIO Expresion
   45          | MAS_MENOS Expresion
   46          | Expresion MAS_MENOS Expresion
   47          | Expresion OP_BIN_LISTA Expresion
   48          | Expresion OP_LIST_CONCA Expresion
   49          | Expresion OP_OR Expresion
   50          | Expresion OP_XOR Expresion
   51          | Expresion OP_AND Expresion
   52          | Expresion OP_RELACION Expresion
   53          | Expresion OP_IGUALDAD Expresion
   54          | Expresion OP_MULTI_DIV Expresion
   55          | Expresion MAS_MAS Expresion OP_GET_LIST Expresion
   56          | IDENT
   57          | Constante
   58          | IDENT PAREN_IZQ Lista_expresiones PAREN_DER
   59          | IDENT PAREN_IZQ PAREN_DER
   60          | error

   61 Constante: CONST_BOOL
   62          | CONST_CAR
   63          | CONST_ENT
   64          | CONST_REAL
   65          | Constante_lista

   66 Constante_lista: CORCH_IZQ Lista_bool CORCH_DER
   67                | CORCH_IZQ Lista_car CORCH_DER
   68                | CORCH_IZQ Lista_ent CORCH_DER
   69                | CORCH_IZQ Lista_real CORCH_DER
   70                | CORCH_IZQ CORCH_DER

   71 Lista_bool: Lista_bool SEPAR CONST_BOOL
   72           | CONST_BOOL

   73 Lista_car: Lista_car SEPAR CONST_CAR
   74          | CONST_CAR

   75 Lista_ent: Lista_ent SEPAR CONST_ENT
   76          | CONST_ENT

   77 Lista_real: Lista_real SEPAR CONST_REAL
   78           | CONST_REAL

   79 Sentencia_if: COND_SI PAREN_IZQ Expresion PAREN_DER Sentencia
   80             | COND_SI PAREN_IZQ Expresion PAREN_DER Sentencia COND_OTRO Sentencia

   81 Sentencia_while: BUCLE PAREN_IZQ Expresion PAREN_DER Sentencia

   82 Sentencia_for: FOR_INI Sentencia_asig FOR_STOP Expresion FOR_STEP Expresion FOR_DO Sentencia

   83 Sentencia_entrada: ENTRADA Lista_ident

   84 Sentencia_salida: SALIDA Lista_expr_cadena

   85 Lista_expr_cadena: Lista_expr_cadena SEPAR Expr_cadena
   86                  | Expr_cadena

   87 Expr_cadena: Expresion
   88            | CONST_CADENA

   89 Sentencia_return: DEVUELVE Expresion

   90 Sentencia_iterar: Expresion OP_AVR_RETR

   91 Sentencia_comienzo: OP_INI_LIST Expresion


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 9 15 20 23 41 60
OP_OR (258) 49
OP_XOR (259) 50
OP_AND (260) 51
OP_IGUALDAD (261) 53
OP_RELACION (262) 52
MAS_MENOS (263) 45 46
MAS_MAS (264) 55
OP_MULTI_DIV (265) 54
OP_GET_LIST (266) 55
OP_BIN_LISTA (267) 47
OP_LIST_CONCA (268) 48
OP_UNARIO (269) 44
INICIO (270) 2
PAREN_IZQ (271) 2 19 43 58 59 79 80 81
PAREN_DER (272) 2 19 43 58 59 79 80 81
CORCH_IZQ (273) 66 67 68 69 70
CORCH_DER (274) 66 67 68 69 70
LLAVE_IZQ (275) 3
LLAVE_DER (276) 3
VAR_IZQ (277) 4
VAR_DER (278) 4
DELIMIT (279) 8 30 34 35 36 37 38
SEPAR (280) 14 22 40 71 73 75 77 85
TIPO (281) 12 19 26
TIPO_LIST (282) 13
IDENT (283) 14 15 16 19 26 39 56 58 59
CONST_BOOL (284) 61 71 72
CONST_CAR (285) 62 73 74
CONST_CADENA (286) 88
CONST_ENT (287) 63 75 76
CONST_REAL (288) 64 77 78
IGUAL (289) 39
COND_SI (290) 79 80
COND_OTRO (291) 80
BUCLE (292) 81
FOR_INI (293) 82
FOR_STOP (294) 82
FOR_STEP (295) 82
FOR_DO (296) 82
ENTRADA (297) 83
SALIDA (298) 84
DEVUELVE (299) 89
OP_INI_LIST (300) 91
OP_AVR_RETR (301) 90


No terminales con las reglas donde aparecen

$accept (47)
    en la izquierda: 0
Programa (48)
    en la izquierda: 1, en la derecha: 0
Cabecera (49)
    en la izquierda: 2, en la derecha: 1
Bloque (50)
    en la izquierda: 3, en la derecha: 1 21 29
Declar_variables_locales (51)
    en la izquierda: 4 5, en la derecha: 3
Cuerpo_variables (52)
    en la izquierda: 6 7, en la derecha: 4 6
Declar_variables (53)
    en la izquierda: 8 9, en la derecha: 6 7
Tipo (54)
    en la izquierda: 10 11, en la derecha: 8
Tipo_dato (55)
    en la izquierda: 12, en la derecha: 10 13
Tipo_lista (56)
    en la izquierda: 13, en la derecha: 11
Lista_ident (57)
    en la izquierda: 14 15 16, en la derecha: 8 14 15 83
Declar_funciones (58)
    en la izquierda: 17 18, en la derecha: 3 17
Cabecera_funcion (59)
    en la izquierda: 19 20, en la derecha: 21
Declar_funcion (60)
    en la izquierda: 21, en la derecha: 17
Lista_parametros (61)
    en la izquierda: 22 23 24 25, en la derecha: 19 22 23
Parametro (62)
    en la izquierda: 26, en la derecha: 22 23 24
Sentencias (63)
    en la izquierda: 27 28, en la derecha: 3 27
Sentencia (64)
    en la izquierda: 29 30 31 32 33 34 35 36 37 38, en la derecha:
    27 28 79 80 81 82
Sentencia_asig (65)
    en la izquierda: 39, en la derecha: 30 82
Lista_expresiones (66)
    en la izquierda: 40 41 42, en la derecha: 40 41 58
Expresion (67)
    en la izquierda: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
    59 60, en la derecha: 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    53 54 55 79 80 81 82 87 89 90 91
Constante (68)
    en la izquierda: 61 62 63 64 65, en la derecha: 57
Constante_lista (69)
    en la izquierda: 66 67 68 69 70, en la derecha: 65
Lista_bool (70)
    en la izquierda: 71 72, en la derecha: 66 71
Lista_car (71)
    en la izquierda: 73 74, en la derecha: 67 73
Lista_ent (72)
    en la izquierda: 75 76, en la derecha: 68 75
Lista_real (73)
    en la izquierda: 77 78, en la derecha: 69 77
Sentencia_if (74)
    en la izquierda: 79 80, en la derecha: 31
Sentencia_while (75)
    en la izquierda: 81, en la derecha: 32
Sentencia_for (76)
    en la izquierda: 82, en la derecha: 33
Sentencia_entrada (77)
    en la izquierda: 83, en la derecha: 34
Sentencia_salida (78)
    en la izquierda: 84, en la derecha: 35
Lista_expr_cadena (79)
    en la izquierda: 85 86, en la derecha: 84 85
Expr_cadena (80)
    en la izquierda: 87 88, en la derecha: 85 86
Sentencia_return (81)
    en la izquierda: 89, en la derecha: 36
Sentencia_iterar (82)
    en la izquierda: 90, en la derecha: 37
Sentencia_comienzo (83)
    en la izquierda: 91, en la derecha: 38


Estado 0

    0 $accept: . Programa $end

    INICIO  desplazar e ir al estado 1

    Programa  ir al estado 2
    Cabecera  ir al estado 3


Estado 1

    2 Cabecera: INICIO . PAREN_IZQ PAREN_DER

    PAREN_IZQ  desplazar e ir al estado 4


Estado 2

    0 $accept: Programa . $end

    $end  desplazar e ir al estado 5


Estado 3

    1 Programa: Cabecera . Bloque

    LLAVE_IZQ  desplazar e ir al estado 6

    Bloque  ir al estado 7


Estado 4

    2 Cabecera: INICIO PAREN_IZQ . PAREN_DER

    PAREN_DER  desplazar e ir al estado 8


Estado 5

    0 $accept: Programa $end .

    $default  aceptar


Estado 6

    3 Bloque: LLAVE_IZQ . Declar_variables_locales Declar_funciones Sentencias LLAVE_DER

    VAR_IZQ  desplazar e ir al estado 9

    $default  reduce usando la regla 5 (Declar_variables_locales)

    Declar_variables_locales  ir al estado 10


Estado 7

    1 Programa: Cabecera Bloque .

    $default  reduce usando la regla 1 (Programa)


Estado 8

    2 Cabecera: INICIO PAREN_IZQ PAREN_DER .

    $default  reduce usando la regla 2 (Cabecera)


Estado 9

    4 Declar_variables_locales: VAR_IZQ . Cuerpo_variables VAR_DER

    error      desplazar e ir al estado 11
    TIPO       desplazar e ir al estado 12
    TIPO_LIST  desplazar e ir al estado 13

    Cuerpo_variables  ir al estado 14
    Declar_variables  ir al estado 15
    Tipo              ir al estado 16
    Tipo_dato         ir al estado 17
    Tipo_lista        ir al estado 18


Estado 10

    3 Bloque: LLAVE_IZQ Declar_variables_locales . Declar_funciones Sentencias LLAVE_DER

    $default  reduce usando la regla 18 (Declar_funciones)

    Declar_funciones  ir al estado 19


Estado 11

    9 Declar_variables: error .

    $default  reduce usando la regla 9 (Declar_variables)


Estado 12

   12 Tipo_dato: TIPO .

    $default  reduce usando la regla 12 (Tipo_dato)


Estado 13

   13 Tipo_lista: TIPO_LIST . Tipo_dato

    TIPO  desplazar e ir al estado 12

    Tipo_dato  ir al estado 20


Estado 14

    4 Declar_variables_locales: VAR_IZQ Cuerpo_variables . VAR_DER
    6 Cuerpo_variables: Cuerpo_variables . Declar_variables

    error      desplazar e ir al estado 11
    VAR_DER    desplazar e ir al estado 21
    TIPO       desplazar e ir al estado 12
    TIPO_LIST  desplazar e ir al estado 13

    Declar_variables  ir al estado 22
    Tipo              ir al estado 16
    Tipo_dato         ir al estado 17
    Tipo_lista        ir al estado 18


Estado 15

    7 Cuerpo_variables: Declar_variables .

    $default  reduce usando la regla 7 (Cuerpo_variables)


Estado 16

    8 Declar_variables: Tipo . Lista_ident DELIMIT

    IDENT  desplazar e ir al estado 23

    Lista_ident  ir al estado 24


Estado 17

   10 Tipo: Tipo_dato .

    $default  reduce usando la regla 10 (Tipo)


Estado 18

   11 Tipo: Tipo_lista .

    $default  reduce usando la regla 11 (Tipo)


Estado 19

    3 Bloque: LLAVE_IZQ Declar_variables_locales Declar_funciones . Sentencias LLAVE_DER
   17 Declar_funciones: Declar_funciones . Declar_funcion

    error        desplazar e ir al estado 25
    MAS_MENOS    desplazar e ir al estado 26
    OP_UNARIO    desplazar e ir al estado 27
    PAREN_IZQ    desplazar e ir al estado 28
    CORCH_IZQ    desplazar e ir al estado 29
    LLAVE_IZQ    desplazar e ir al estado 6
    TIPO         desplazar e ir al estado 30
    IDENT        desplazar e ir al estado 31
    CONST_BOOL   desplazar e ir al estado 32
    CONST_CAR    desplazar e ir al estado 33
    CONST_ENT    desplazar e ir al estado 34
    CONST_REAL   desplazar e ir al estado 35
    COND_SI      desplazar e ir al estado 36
    BUCLE        desplazar e ir al estado 37
    FOR_INI      desplazar e ir al estado 38
    ENTRADA      desplazar e ir al estado 39
    SALIDA       desplazar e ir al estado 40
    DEVUELVE     desplazar e ir al estado 41
    OP_INI_LIST  desplazar e ir al estado 42

    Bloque              ir al estado 43
    Cabecera_funcion    ir al estado 44
    Declar_funcion      ir al estado 45
    Sentencias          ir al estado 46
    Sentencia           ir al estado 47
    Sentencia_asig      ir al estado 48
    Expresion           ir al estado 49
    Constante           ir al estado 50
    Constante_lista     ir al estado 51
    Sentencia_if        ir al estado 52
    Sentencia_while     ir al estado 53
    Sentencia_for       ir al estado 54
    Sentencia_entrada   ir al estado 55
    Sentencia_salida    ir al estado 56
    Sentencia_return    ir al estado 57
    Sentencia_iterar    ir al estado 58
    Sentencia_comienzo  ir al estado 59


Estado 20

   13 Tipo_lista: TIPO_LIST Tipo_dato .

    $default  reduce usando la regla 13 (Tipo_lista)


Estado 21

    4 Declar_variables_locales: VAR_IZQ Cuerpo_variables VAR_DER .

    $default  reduce usando la regla 4 (Declar_variables_locales)


Estado 22

    6 Cuerpo_variables: Cuerpo_variables Declar_variables .

    $default  reduce usando la regla 6 (Cuerpo_variables)


Estado 23

   16 Lista_ident: IDENT .

    $default  reduce usando la regla 16 (Lista_ident)


Estado 24

    8 Declar_variables: Tipo Lista_ident . DELIMIT
   14 Lista_ident: Lista_ident . SEPAR IDENT
   15            | Lista_ident . error IDENT

    error    desplazar e ir al estado 60
    DELIMIT  desplazar e ir al estado 61
    SEPAR    desplazar e ir al estado 62


Estado 25

   20 Cabecera_funcion: error .
   60 Expresion: error .

    LLAVE_IZQ  reduce usando la regla 20 (Cabecera_funcion)
    $default   reduce usando la regla 60 (Expresion)


Estado 26

   45 Expresion: MAS_MENOS . Expresion

    error       desplazar e ir al estado 63
    MAS_MENOS   desplazar e ir al estado 26
    OP_UNARIO   desplazar e ir al estado 27
    PAREN_IZQ   desplazar e ir al estado 28
    CORCH_IZQ   desplazar e ir al estado 29
    IDENT       desplazar e ir al estado 64
    CONST_BOOL  desplazar e ir al estado 32
    CONST_CAR   desplazar e ir al estado 33
    CONST_ENT   desplazar e ir al estado 34
    CONST_REAL  desplazar e ir al estado 35

    Expresion        ir al estado 65
    Constante        ir al estado 50
    Constante_lista  ir al estado 51


Estado 27

   44 Expresion: OP_UNARIO . Expresion

    error       desplazar e ir al estado 63
    MAS_MENOS   desplazar e ir al estado 26
    OP_UNARIO   desplazar e ir al estado 27
    PAREN_IZQ   desplazar e ir al estado 28
    CORCH_IZQ   desplazar e ir al estado 29
    IDENT       desplazar e ir al estado 64
    CONST_BOOL  desplazar e ir al estado 32
    CONST_CAR   desplazar e ir al estado 33
    CONST_ENT   desplazar e ir al estado 34
    CONST_REAL  desplazar e ir al estado 35

    Expresion        ir al estado 66
    Constante        ir al estado 50
    Constante_lista  ir al estado 51


Estado 28

   43 Expresion: PAREN_IZQ . Expresion PAREN_DER

    error       desplazar e ir al estado 63
    MAS_MENOS   desplazar e ir al estado 26
    OP_UNARIO   desplazar e ir al estado 27
    PAREN_IZQ   desplazar e ir al estado 28
    CORCH_IZQ   desplazar e ir al estado 29
    IDENT       desplazar e ir al estado 64
    CONST_BOOL  desplazar e ir al estado 32
    CONST_CAR   desplazar e ir al estado 33
    CONST_ENT   desplazar e ir al estado 34
    CONST_REAL  desplazar e ir al estado 35

    Expresion        ir al estado 67
    Constante        ir al estado 50
    Constante_lista  ir al estado 51


Estado 29

   66 Constante_lista: CORCH_IZQ . Lista_bool CORCH_DER
   67                | CORCH_IZQ . Lista_car CORCH_DER
   68                | CORCH_IZQ . Lista_ent CORCH_DER
   69                | CORCH_IZQ . Lista_real CORCH_DER
   70                | CORCH_IZQ . CORCH_DER

    CORCH_DER   desplazar e ir al estado 68
    CONST_BOOL  desplazar e ir al estado 69
    CONST_CAR   desplazar e ir al estado 70
    CONST_ENT   desplazar e ir al estado 71
    CONST_REAL  desplazar e ir al estado 72

    Lista_bool  ir al estado 73
    Lista_car   ir al estado 74
    Lista_ent   ir al estado 75
    Lista_real  ir al estado 76


Estado 30

   19 Cabecera_funcion: TIPO . IDENT PAREN_IZQ Lista_parametros PAREN_DER

    IDENT  desplazar e ir al estado 77


Estado 31

   39 Sentencia_asig: IDENT . IGUAL Expresion
   56 Expresion: IDENT .
   58          | IDENT . PAREN_IZQ Lista_expresiones PAREN_DER
   59          | IDENT . PAREN_IZQ PAREN_DER

    PAREN_IZQ  desplazar e ir al estado 78
    IGUAL      desplazar e ir al estado 79

    $default  reduce usando la regla 56 (Expresion)


Estado 32

   61 Constante: CONST_BOOL .

    $default  reduce usando la regla 61 (Constante)


Estado 33

   62 Constante: CONST_CAR .

    $default  reduce usando la regla 62 (Constante)


Estado 34

   63 Constante: CONST_ENT .

    $default  reduce usando la regla 63 (Constante)


Estado 35

   64 Constante: CONST_REAL .

    $default  reduce usando la regla 64 (Constante)


Estado 36

   79 Sentencia_if: COND_SI . PAREN_IZQ Expresion PAREN_DER Sentencia
   80             | COND_SI . PAREN_IZQ Expresion PAREN_DER Sentencia COND_OTRO Sentencia

    PAREN_IZQ  desplazar e ir al estado 80


Estado 37

   81 Sentencia_while: BUCLE . PAREN_IZQ Expresion PAREN_DER Sentencia

    PAREN_IZQ  desplazar e ir al estado 81


Estado 38

   82 Sentencia_for: FOR_INI . Sentencia_asig FOR_STOP Expresion FOR_STEP Expresion FOR_DO Sentencia

    IDENT  desplazar e ir al estado 82

    Sentencia_asig  ir al estado 83


Estado 39

   83 Sentencia_entrada: ENTRADA . Lista_ident

    IDENT  desplazar e ir al estado 23

    Lista_ident  ir al estado 84


Estado 40

   84 Sentencia_salida: SALIDA . Lista_expr_cadena

    error         desplazar e ir al estado 63
    MAS_MENOS     desplazar e ir al estado 26
    OP_UNARIO     desplazar e ir al estado 27
    PAREN_IZQ     desplazar e ir al estado 28
    CORCH_IZQ     desplazar e ir al estado 29
    IDENT         desplazar e ir al estado 64
    CONST_BOOL    desplazar e ir al estado 32
    CONST_CAR     desplazar e ir al estado 33
    CONST_CADENA  desplazar e ir al estado 85
    CONST_ENT     desplazar e ir al estado 34
    CONST_REAL    desplazar e ir al estado 35

    Expresion          ir al estado 86
    Constante          ir al estado 50
    Constante_lista    ir al estado 51
    Lista_expr_cadena  ir al estado 87
    Expr_cadena        ir al estado 88


Estado 41

   89 Sentencia_return: DEVUELVE . Expresion

    error       desplazar e ir al estado 63
    MAS_MENOS   desplazar e ir al estado 26
    OP_UNARIO   desplazar e ir al estado 27
    PAREN_IZQ   desplazar e ir al estado 28
    CORCH_IZQ   desplazar e ir al estado 29
    IDENT       desplazar e ir al estado 64
    CONST_BOOL  desplazar e ir al estado 32
    CONST_CAR   desplazar e ir al estado 33
    CONST_ENT   desplazar e ir al estado 34
    CONST_REAL  desplazar e ir al estado 35

    Expresion        ir al estado 89
    Constante        ir al estado 50
    Constante_lista  ir al estado 51


Estado 42

   91 Sentencia_comienzo: OP_INI_LIST . Expresion

    error       desplazar e ir al estado 63
    MAS_MENOS   desplazar e ir al estado 26
    OP_UNARIO   desplazar e ir al estado 27
    PAREN_IZQ   desplazar e ir al estado 28
    CORCH_IZQ   desplazar e ir al estado 29
    IDENT       desplazar e ir al estado 64
    CONST_BOOL  desplazar e ir al estado 32
    CONST_CAR   desplazar e ir al estado 33
    CONST_ENT   desplazar e ir al estado 34
    CONST_REAL  desplazar e ir al estado 35

    Expresion        ir al estado 90
    Constante        ir al estado 50
    Constante_lista  ir al estado 51


Estado 43

   29 Sentencia: Bloque .

    $default  reduce usando la regla 29 (Sentencia)


Estado 44

   21 Declar_funcion: Cabecera_funcion . Bloque

    LLAVE_IZQ  desplazar e ir al estado 6

    Bloque  ir al estado 91


Estado 45

   17 Declar_funciones: Declar_funciones Declar_funcion .

    $default  reduce usando la regla 17 (Declar_funciones)


Estado 46

    3 Bloque: LLAVE_IZQ Declar_variables_locales Declar_funciones Sentencias . LLAVE_DER
   27 Sentencias: Sentencias . Sentencia

    error        desplazar e ir al estado 63
    MAS_MENOS    desplazar e ir al estado 26
    OP_UNARIO    desplazar e ir al estado 27
    PAREN_IZQ    desplazar e ir al estado 28
    CORCH_IZQ    desplazar e ir al estado 29
    LLAVE_IZQ    desplazar e ir al estado 6
    LLAVE_DER    desplazar e ir al estado 92
    IDENT        desplazar e ir al estado 31
    CONST_BOOL   desplazar e ir al estado 32
    CONST_CAR    desplazar e ir al estado 33
    CONST_ENT    desplazar e ir al estado 34
    CONST_REAL   desplazar e ir al estado 35
    COND_SI      desplazar e ir al estado 36
    BUCLE        desplazar e ir al estado 37
    FOR_INI      desplazar e ir al estado 38
    ENTRADA      desplazar e ir al estado 39
    SALIDA       desplazar e ir al estado 40
    DEVUELVE     desplazar e ir al estado 41
    OP_INI_LIST  desplazar e ir al estado 42

    Bloque              ir al estado 43
    Sentencia           ir al estado 93
    Sentencia_asig      ir al estado 48
    Expresion           ir al estado 49
    Constante           ir al estado 50
    Constante_lista     ir al estado 51
    Sentencia_if        ir al estado 52
    Sentencia_while     ir al estado 53
    Sentencia_for       ir al estado 54
    Sentencia_entrada   ir al estado 55
    Sentencia_salida    ir al estado 56
    Sentencia_return    ir al estado 57
    Sentencia_iterar    ir al estado 58
    Sentencia_comienzo  ir al estado 59


Estado 47

   28 Sentencias: Sentencia .

    $default  reduce usando la regla 28 (Sentencias)


Estado 48

   30 Sentencia: Sentencia_asig . DELIMIT

    DELIMIT  desplazar e ir al estado 94


Estado 49

   46 Expresion: Expresion . MAS_MENOS Expresion
   47          | Expresion . OP_BIN_LISTA Expresion
   48          | Expresion . OP_LIST_CONCA Expresion
   49          | Expresion . OP_OR Expresion
   50          | Expresion . OP_XOR Expresion
   51          | Expresion . OP_AND Expresion
   52          | Expresion . OP_RELACION Expresion
   53          | Expresion . OP_IGUALDAD Expresion
   54          | Expresion . OP_MULTI_DIV Expresion
   55          | Expresion . MAS_MAS Expresion OP_GET_LIST Expresion
   90 Sentencia_iterar: Expresion . OP_AVR_RETR

    OP_OR          desplazar e ir al estado 95
    OP_XOR         desplazar e ir al estado 96
    OP_AND         desplazar e ir al estado 97
    OP_IGUALDAD    desplazar e ir al estado 98
    OP_RELACION    desplazar e ir al estado 99
    MAS_MENOS      desplazar e ir al estado 100
    MAS_MAS        desplazar e ir al estado 101
    OP_MULTI_DIV   desplazar e ir al estado 102
    OP_BIN_LISTA   desplazar e ir al estado 103
    OP_LIST_CONCA  desplazar e ir al estado 104
    OP_AVR_RETR    desplazar e ir al estado 105


Estado 50

   57 Expresion: Constante .

    $default  reduce usando la regla 57 (Expresion)


Estado 51

   65 Constante: Constante_lista .

    $default  reduce usando la regla 65 (Constante)


Estado 52

   31 Sentencia: Sentencia_if .

    $default  reduce usando la regla 31 (Sentencia)


Estado 53

   32 Sentencia: Sentencia_while .

    $default  reduce usando la regla 32 (Sentencia)


Estado 54

   33 Sentencia: Sentencia_for .

    $default  reduce usando la regla 33 (Sentencia)


Estado 55

   34 Sentencia: Sentencia_entrada . DELIMIT

    DELIMIT  desplazar e ir al estado 106


Estado 56

   35 Sentencia: Sentencia_salida . DELIMIT

    DELIMIT  desplazar e ir al estado 107


Estado 57

   36 Sentencia: Sentencia_return . DELIMIT

    DELIMIT  desplazar e ir al estado 108


Estado 58

   37 Sentencia: Sentencia_iterar . DELIMIT

    DELIMIT  desplazar e ir al estado 109


Estado 59

   38 Sentencia: Sentencia_comienzo . DELIMIT

    DELIMIT  desplazar e ir al estado 110


Estado 60

   15 Lista_ident: Lista_ident error . IDENT

    IDENT  desplazar e ir al estado 111


Estado 61

    8 Declar_variables: Tipo Lista_ident DELIMIT .

    $default  reduce usando la regla 8 (Declar_variables)


Estado 62

   14 Lista_ident: Lista_ident SEPAR . IDENT

    IDENT  desplazar e ir al estado 112


Estado 63

   60 Expresion: error .

    $default  reduce usando la regla 60 (Expresion)


Estado 64

   56 Expresion: IDENT .
   58          | IDENT . PAREN_IZQ Lista_expresiones PAREN_DER
   59          | IDENT . PAREN_IZQ PAREN_DER

    PAREN_IZQ  desplazar e ir al estado 78

    $default  reduce usando la regla 56 (Expresion)


Estado 65
